--- a/src/styles/element/dark.scss
+++ b/src/styles/element/dark.scss
@@ -2,7 +2,22 @@
 
 $--colors: (
   "primary": (
-    "base": #589ef8,
+    "base": green,
+  ),
+  "success": (
+    "base": #21ba45,
+  ),
+  "warning": (
+    "base": #f2711c,
+  ),
+  "danger": (
+    "base": #db2828,
+  ),
+  "error": (
+    "base": #db2828,
+  ),
+  "info": (
+    "base": #42b8dd,
   ),
 );
 
