--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -1,21 +1,21 @@
 $--colors: (
   "primary": (
-    "base": green,
+    "base": #0e42d2,
   ),
   "success": (
-    "base": #21ba45,
+    "base": #009a29,
   ),
   "warning": (
-    "base": #f2711c,
+    "base": #d25f00,
   ),
   "danger": (
-    "base": #db2828,
+    "base": #cb2634,
   ),
   "error": (
-    "base": #db2828,
+    "base": #cb2634,
   ),
   "info": (
-    "base": #42b8dd,
+    "base": #4080ff,
   ),
 );
 
@@ -29,7 +29,7 @@ $--colors: (
 @forward "element-plus/theme-chalk/src/common/var.scss" with (
   // do not use same name, it will override.
   $colors: $--colors,
-  $button-padding-horizontal: ("default": 50px)
+  /*$button-padding-horizontal: ("default": 50px)*/
 );
 
 // if you want to import all
@@ -37,6 +37,5 @@ $--colors: (
 
 // You can comment it to hide debug info.
 // @debug $--colors;
-
 // custom dark variables
 @use "./dark.scss";
