feat: add api design

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,9 @@
 // :root {
 //   --ep-color-primary: red;
 // }
+:root {
+  --ep-font-size-base: 12px; /* Element Plus的基础字体大小 */
+}
 
 body {
   font-family: Inter, system-ui, Avenir, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
@@ -22,4 +25,8 @@ code {
   padding: 2px 4px;
   background-color: var(--ep-color-primary-light-9);
   color: var(--ep-color-primary);
+}
+
+table {
+  font-size: 14px;
 }
