--- a/src/pages/ApiManagement/index.css
+++ b/src/pages/ApiManagement/index.css
@@ -1,3 +1,11 @@
 .ant-tree-node-content-wrapper {
   display: flex;
 }
+
+.graphiql-container {
+  height: 600px;
+}
+
+.graphiql-session-header {
+  height: 2px;
+}
