fix: 调整api页面树级结构的样式以及部分style转为tailwind

--- a/src/pages/APIManagement/index.css
+++ b/src/pages/APIManagement/index.css
@@ -13,3 +13,17 @@
 .api-management-card .ant-card-body {
   height: 100%;
 }
+
+.api-tree .ant-tree-treenode {
+  gap: 4px;
+}
+
+.api-tree.ant-tree-block-node .ant-tree-treenode .ant-tree-node-content-wrapper {
+  overflow: hidden;
+  flex: 1;
+  gap: 4px;
+}
+
+.api-tree.ant-tree-block-node .ant-tree-treenode .ant-tree-title {
+  width: calc(100% - 14px);
+}
