fix: 调整api+data核心区左侧树结构的样式

--- a/src/pages/APIManagement/index.css
+++ b/src/pages/APIManagement/index.css
@@ -27,3 +27,15 @@
 .api-tree.ant-tree-block-node .ant-tree-treenode .ant-tree-title {
   width: calc(100% - 14px);
 }
+
+.ant-space .ant-space-item:last-child {
+  width: 100%;
+}
+
+:where(.css-dev-only-do-not-override-1x0dypw).ant-splitter .ant-splitter-panel {
+  padding-right: 24px;
+}
+
+.ant-tree-title div span:first-child {
+  max-width: 130px;
+}
