--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ html.dark .ant-layout-sider {
   color: #f5f5f5 !important;
   border-right: 1px solid #23232a !important;
 }
+html.dark .ant-layout-sider span {
+  color: #f5f5f5 !important;
+}
 html.dark .ant-menu,
 html.dark .ant-menu-item {
   background: #23232a !important;
