--- a/src/pages/ApiView/index.module.scss
+++ b/src/pages/ApiView/index.module.scss
@@ -1,7 +1,14 @@
 .root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  
   :global {
+    // 确保内容区域占满剩余空间
     .ant-tabs-content {
       height: 100%;
+      flex: 1;
+      
       .ant-tabs-tabpane {
         height: 100%;
       }
