--- a/src/pages/DataView/components/ERView.module.scss
+++ b/src/pages/DataView/components/ERView.module.scss
@@ -1,21 +1,34 @@
 .container {
   height: 100%;
   padding: 0;
+  margin: 0;
   background-color: transparent;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .contentCard {
   flex: 1;
   height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
   
   :global {
     .ant-card-body {
       height: calc(100% - 57px); // 减去Card header的高度
       padding: 0;
+      margin: 0;
       overflow: hidden;
       background: transparent;
+    }
+    
+    .ant-card {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
     }
   }
 }
