feat:优化主题样式和暗黑模式处理
- 移除自定义 Antd 菜单项样式，简化为默认样式
- 更新登录页面背景渐变色- 优化暗黑模式处理逻辑，本地存储暗黑模式状态- 修复一些样式问题，如侧边栏 logo 圆角

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -2,12 +2,9 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-/* 自定义Antd菜单项样式 */
-.custom-sidebar-menu .ant-menu-item {
-  @apply flex flex-col items-center mx-[7px] rounded-[5px] py-[5px] mt-[10px] cursor-pointer;
-}
-.custom-sidebar-menu .ant-menu-item-selected {
-  @apply text-[#1677ff] bg-[#e6f4ff] dark:bg-[#23232a] dark:text-[#1677ff];
+
+.ant-menu-item-selected {
+  @apply text-white bg-[#1677ff] dark:bg-[#1677ff] dark:text-white;
 }
 
 /* 页面内全屏样式 */
